# supertoroid_paper

./: CMakeLists.txt  CMakeListsOriginal.txt  README.md  package  package.xml  packageOriginal.xml
config/: STparameters.yaml
include/supertoroid/: st_fitting.h  st_sampling.h  st_segmentation.h  util.h  util.h.autosave
launch/: STfitting.launch  STsampling.launch
msg/: st.msg
src/supertoroid/: st_fitting.cpp  st_sampling.cpp  st_segmentation.cpp  util.cpp
src/test/: openni_grabber.cpp  pcd_viewer.cpp  sampling_test_pcd_st.cpp  st_fitting_test_pcd.cpp  st_sampling_test_big.cpp  st_sampling_test_pcd.cpp  st_segmentation_test_pcd.cpp
st_tests/: object_cloud.pcd  table_cloud.pcd  workspace_cloud.pcd
